--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,8 @@ jobs:
 
     - name: Lint JavaScript
       run: |
+        echo 'export default [];' > eslint.config.js
         eslint "**/*.js"
-
-#      echo 'export default [];' > eslint.config.js
 
     - name: Lint CSS
       run: |
