--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,25 +54,26 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
+    
+        #UNCOMMENT THESE WHEN WE ACTUALLY HAVE HTML, CSS AND JS FILES
+    # - name: Install linters
+    #   run: |
+    #     npm install -g htmlhint eslint stylelint stylelint-config-standard postcss postcss-scss
 
-    - name: Install linters
-      run: |
-        npm install -g htmlhint eslint stylelint stylelint-config-standard postcss postcss-scss
+    # - name: Lint HTML
+    #   run: htmlhint "**/*.html"
 
-    - name: Lint HTML
-      run: htmlhint "**/*.html"
+    # - name: Lint JavaScript
+    #   run: |
+    #     echo 'export default [];' > eslint.config.mjs
+    #     eslint "**/*.js"
 
-    - name: Lint JavaScript
-      run: |
-        echo 'export default [];' > eslint.config.mjs
-        eslint "**/*.js"
-
-    - name: Lint CSS
-      run: |
-        echo '{
-          "extends": "stylelint-config-standard"
-        }' > .stylelintrc.json
-        stylelint "**/*.css"
+    # - name: Lint CSS
+    #   run: |
+    #     echo '{
+    #       "extends": "stylelint-config-standard"
+    #     }' > .stylelintrc.json
+    #     stylelint "**/*.css"
 
     - name: Install PHP
       uses: shivammathur/setup-php@v2
